Clarify installation procedure
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@19 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/docs/README
+++ b/samba-pdbsql/docs/README
@@ -2,15 +2,17 @@ Installation
 ------------
 If you are running out of CVS, run ./autogen.sh to create configure.
 
-Now run:
+You will need to download the Samba source tree. Run:
 
-./configure --with-samba-dir=$SOURCEDIR
-
-where $SOURCEDIR is the path to a copy of the Samba sources.
+$ cd $SAMBADIR/source
+$ ./configure
+$ make proto
+$ cd $PDBSQLDIR
+$ ./configure --with-samba-dir=$SAMBADIR
+$ make
+$ make install 
 
 Run ./configure --help for a list of additional options.
-
-Run "make && make install" to install.
 
 Configuration
 -------------
