Move sources to top-level directory. Add AUTHORS file Update README
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@30 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/docs/README
+++ b/samba-pdbsql/docs/README
@@ -1,6 +1,6 @@
 Installation
 ------------
-If you are running out of CVS, run ./autogen.sh to create configure.
+If you are running out of Subversion, run ./autogen.sh to create configure.
 
 You will need to download the Samba source tree. Run:
 
@@ -16,5 +16,4 @@ Run ./configure --help for a list of additional options.
 
 Configuration
 -------------
-See the Samba HOWTO Collection and the other README files in this directory for 
-details.
+See the other README files in this directory for details.
