--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
-Jelmer Vernooij <jelmer@samba.org>
-Wilco Baan Hofman
-Hamish Friedlander 
+Current maintainer:
 Collen Blijenberg
+
+original authors:
+Jelmer Vernooij <jelmer@samba.org> (pdbsql core / pdb_mysql / pdb_multi)
+Wilco Baan Hofman (pdb_multi)
+Hamish Friedlander (pdb_pgsql)
